Fix scroll anchoring during viewport resize.

WebView::resizeWithTopControls does a synchronous layout.  Anchoring scrolls
performed during this layout were getting clobbered by ResizeViewportAnchor,
whose purpose is to scroll the viewports to preserve their combined position
(as reported by RootFrameViewport) after bounds-clamping to their new sizes.

After this change, ResizeViewportAnchor tracks the resize-induced scroll delta
while ignoring other scrolls.

BUG=626258, 612305

Review-Url: https://codereview.chromium.org/2184333002
Cr-Commit-Position: refs/heads/master@{#408439}

Former-commit-id: 6913f420989be6dbaed45bd7e1b60042ff119d70