third_party/WebKit/Source/web/web.gypi
@@ -105,7 +105,6 @@
       'UserMediaClientImpl.h',
       'ValidationMessageClientImpl.cpp',
       'ValidationMessageClientImpl.h',
-      'ViewportAnchor.h',
       'WebAXObject.cpp',
       'WebArrayBuffer.cpp',
       'WebArrayBufferConverter.cpp',
